Reset 4.0 architecture around WildStacker authority
Delete the Plexon-native stacking runtime and replace it with the narrow Silk/Essence recovery policy plus WildStacker-backed withdrawal GUI. Pin the public WildStacker 2026.2 API, reset configuration/docs/workflows, and add negative legacy-runtime distribution gates.